<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomainscreen">

    <ImageView
        android:id="@+id/ivLogoApumanque"
        android:layout_width="153dp"
        android:layout_height="176dp"
        app:srcCompat="@drawable/logoapumanque_v2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/llBotonesInicioApp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintVertical_bias="0.049" />

    <LinearLayout
        android:id="@+id/llBotonesInicioApp"
        android:layout_width="1050dp"
        android:layout_height="208dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="422dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btirMapa">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/rl_tiendas"
                android:layout_width="208dp"
                android:layout_height="208dp"
                android:background="@drawable/circulo"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic_tiendas"
                    android:layout_width="71dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="6dp"
                    android:src="@drawable/tiendas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="17dp"
                    android:text="@string/tiendas"
                    android:textColor="@color/blanco"
                    android:textSize="22sp"
                    android:layout_below="@id/ic_tiendas"
                    fontPath="fonts/Lato-Regular.ttf"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/rl_comida"
                android:layout_width="208dp"
                android:layout_height="208dp"
                android:background="@drawable/circulo_dos"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic_comida"
                    android:layout_width="71dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="3dp"
                    android:src="@drawable/comida"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="17dp"
                    android:text="@string/comida"
                    android:textColor="@color/blanco"
                    android:textSize="22sp"
                    android:layout_below="@id/ic_comida"
                    fontPath="fonts/Lato-Regular.ttf"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/rl_descuentos"
                android:layout_width="208dp"
                android:layout_height="208dp"
                android:background="@drawable/circulo_tres"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic_descuentos"
                    android:layout_width="71dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/descuentos" />

                <TextView
                    fontPath="fonts/Lato-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_descuentos"
                    android:paddingTop="17dp"
                    android:text="@string/descuentosDos"
                    android:textColor="@color/blanco"
                    android:textSize="22sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/rl_promociones"
                android:layout_width="208dp"
                android:layout_height="208dp"
                android:background="@drawable/circulo_cuatro"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ic_promociones"
                    android:layout_width="71dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="43dp"
                    android:src="@drawable/participayganahome"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="17dp"
                    android:text="Participa y Gana"
                    android:textColor="@color/blanco"
                    android:textSize="22sp"
                    android:layout_below="@id/ic_promociones"
                    fontPath="fonts/Lato-Regular.ttf"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:visibility="gone"
        android:id="@+id/ivDescargarApp"
        android:layout_width="1045dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="809dp"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btirMapa"
        app:srcCompat="@drawable/descargapp_v2" />

    <TextView
        android:id="@+id/tv_queBuscas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que_buscas"
        android:textIsSelectable="false"
        android:textSize="120sp"
        android:textColor="@color/blanco"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btirMapa"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/llBotonesInicioApp"
        app:layout_constraintVertical_bias="0.74"
        app:layout_constraintHorizontal_bias="0.48" />

    <LinearLayout
        android:id="@+id/btirMapa"
        android:layout_width="234dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ver_mapa"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/mapa" />

        <TextView
            fontPath="fonts/Lato-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ver_mapa"
            android:textColor="#ffffff"
            android:textSize="27sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>