<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoRecycler">

    <RelativeLayout
        android:id="@+id/rl_panel"
        android:layout_width="300dp"
        android:layout_height="match_parent"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_tiendasFragmentSP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="301dp">

        <LinearLayout
            android:id="@+id/ll_tienda1"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.96"
                android:background="@color/negro"
                android:gravity="right">

                <RelativeLayout
                    android:id="@+id/rl_botonAzul"
                    android:layout_width="308dp"
                    android:layout_height="match_parent"
                    android:background="@color/azulBoton"
                    android:gravity="center">

                    <TextView
                        fontPath="fonts/Lato-Regular.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="27dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/que_buscas"
                        android:textColor="@color/blanco"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="39dp"
                        android:background="@drawable/lupa_buscar" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_botonNaranja"
                    android:layout_width="308dp"
                    android:layout_height="match_parent"
                    android:background="@color/naranjaBoton"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="77dp"
                        android:layout_marginTop="3dp"
                        android:text="Cancelar"
                        android:textColor="@color/negro"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="76dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/cancelaricono" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.86">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/rlBotones"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/llAz"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/border_wl"
                            android:gravity="center">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="A/Z"
                                android:textColor="@color/blanco"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llRubros"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/border_wr"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="RUBROS"
                                android:textColor="@color/blanco"
                                android:textSize="28sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llPiso"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/border_wr"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="PISO"
                                android:textColor="@color/blanco"
                                android:textSize="28sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.18">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/llBotonesTiendas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <LinearLayout
                            android:id="@+id/llTiendasOpciones"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.35"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tv_tiendasOpciones"
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="110dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/tiendas"
                                android:textColor="@color/blanco"
                                android:textSize="30sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llNumero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="33dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/numero"
                                android:textColor="@color/blanco"
                                android:textSize="30sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llPisoPasillo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.65"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/piso_pasillo"
                                android:textColor="@color/blanco"
                                android:textSize="30sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llPisoPiso"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                fontPath="fonts/Lato-Regular.ttf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="230dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/piso"
                                android:textColor="@color/blanco"
                                android:textSize="30sp" />

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_tienda1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>